# src/openapi/api.json
@@ -65,6 +65,9 @@
 			"Funder": {
 				"$ref": "./components/schemas/Funder.json"
 			},
+			"FunderCollaborativeMember": {
+				"$ref": "./components/schemas/FunderCollaborativeMember.json"
+			},
 			"ShallowChangemaker": {
 				"$ref": "./components/schemas/ShallowChangemaker.json"
 			},
@@ -235,6 +238,12 @@
 		},
 		"/funders/{funderShortCode}": {
 			"$ref": "./paths/funder.json"
+		},
+		"/funderCollaborativeMembers": {
+			"$ref": "./paths/funderCollaborativeMembers.json"
+		},
+		"/funderCollaborativeMembers/{funderCollaborativeShortCode}/{memberShortCode}": {
+			"$ref": "./paths/funderCollaborativeMember.json"
 		},
 		"/baseFields/{baseFieldShortCode}/localizations": {
 			"$ref": "./paths/baseFieldLocalizations.json"
