# src/routers/index.ts
@@ -3,6 +3,7 @@ import { applicationFormsRouter } from './applicationFormsRouter';
 import { baseFieldsRouter } from './baseFieldsRouter';
 import { dataProvidersRouter } from './dataProviderRouter';
 import { fundersRouter } from './fundersRouter';
+import { funderCollaborativeMembersRouter } from './funderCollaborativeMembersRouter';
 import { opportunitiesRouter } from './opportunitiesRouter';
 import { changemakersRouter } from './changemakersRouter';
 import { changemakerProposalsRouter } from './changemakerProposalsRouter';
@@ -25,6 +26,7 @@ rootRouter.use('/changemakers', changemakersRouter);
 rootRouter.use('/changemakerProposals', changemakerProposalsRouter);
 rootRouter.use('/dataProviders', dataProvidersRouter);
 rootRouter.use('/funders', fundersRouter);
+rootRouter.use('/funderCollaborativeMembers', funderCollaborativeMembersRouter);
 rootRouter.use('/opportunities', opportunitiesRouter);
 rootRouter.use('/userGroups', userGroupsRouter);
 rootRouter.use('/platformProviderResponses', platformProviderResponsesRouter);
